# bmz-player

./: .env.example  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  THIRD-PARTY-NOTICES.txt  about.hbs  about.toml  eslint.config.mjs  nuxt.config.ts  package.json  prettier.config.ts  skills-lock.json  web-license-policy.json  wrangler.jsonc
.agents/skills/supabase-ir-db/: SKILL.md
.github/workflows/: release-apps.yml
assets/app-icon/: bmz-player.icns
assets/skins/default/: skin.toml
assets/songs/sample-playable/: sample-playable.bms
bmz-ir-web/app/: app.css  app.vue
bmz-ir-web/app/components/: AppFooter.vue  AppHeader.vue  AppSidebar.vue  LocaleSelect.vue
bmz-ir-web/app/composables/: useApiError.ts  useAppNavigation.ts  useLocaleFormat.ts
bmz-ir-web/app/pages/: daily.vue  index.vue  licenses.vue  login.vue  logout.vue  profile.vue  register.vue  (+5 more)
crates/bmz-app/: Cargo.toml
crates/bmz-app/src/: app.rs  audio.rs  bootstrap.rs  chart_asset.rs  chart_preview.rs  cli.rs  course.rs  course_cmd.rs  difficulty_table.rs  lib.rs  ln_policy.rs  main.rs  paths.rs  practice_ui.rs  select_options.rs  skin_loader.rs  songs_cmd.rs  system_sound.rs  system_sound_manager.rs  table_cmd.rs  ui.rs  video_bga.rs
crates/bmz-app/src/config/: app_config.rs  key_config.rs  load.rs  mod.rs  play.rs  play_input.rs  profile_config.rs  save.rs  settings_registry.rs
crates/bmz-app/src/input/: gilrs.rs  winit.rs
crates/bmz-app/src/ir/: bmz_official.rs  mod.rs  payload.rs  types.rs
crates/bmz-app/src/screens/: course_session.rs  key_config_edit.rs  mod.rs  play.rs  play_finish.rs  play_loop.rs  play_session.rs  play_snapshot.rs  play_start.rs  result_model.rs  select.rs  select_model.rs  settings_edit.rs  settings_model.rs
crates/bmz-app/src/storage/: common.rs  course_db.rs  difficulty_table_db.rs  import.rs  library_db.rs  migration.rs  mod.rs  play_result.rs  replay.rs  scan.rs  score_db.rs  score_import.rs
crates/bmz-audio/: Cargo.toml
crates/bmz-audio/src/: clock.rs  command.rs  engine.rs  ffmpeg_loader.rs  lib.rs  loader.rs  loudness.rs  mixer.rs  queue.rs  sample.rs
crates/bmz-audio/src/backend/: cpal.rs  mod.rs  wasapi.rs
crates/bmz-chart/: Cargo.toml
crates/bmz-chart/examples/: bms_rs_spike.rs
crates/bmz-chart/src/: bga.rs  bga_asset.rs  bga_keybound.rs  hash.rs  lib.rs  model.rs  practice.rs  sound_asset.rs  start_margin.rs  text.rs  timing.rs  volume.rs
crates/bmz-chart/src/import/: bms_adapter.rs  bms_rs_adapter.rs  bmson_adapter.rs  bmson_timing.rs  decode.rs  error.rs  intermediate.rs  long_note.rs  mod.rs  normalize.rs
crates/bmz-core/: Cargo.toml
crates/bmz-ffmpeg/: Cargo.toml
crates/bmz-font/: Cargo.toml
crates/bmz-gameplay/: Cargo.toml
crates/bmz-gameplay/src/: autoplay.rs  gauge.rs  hit_error.rs  lib.rs  replay.rs  result.rs  rule.rs  score.rs  session.rs
crates/bmz-gameplay/src/input/: backend.rs  binding.rs  bounce.rs  mod.rs  system.rs  translator.rs
crates/bmz-gameplay/src/judge/: engine.rs  mod.rs  model.rs  window.rs
crates/bmz-player/: Cargo.toml
crates/bmz-player/src/: app.rs  audio.rs  bootstrap.rs  chart_asset.rs  chart_preview.rs  cli.rs  course_cmd.rs  difficulty_table.rs  discord_presence.rs  generated_preview.rs  i18n.rs  ir_cmd.rs  lib.rs  ln_policy.rs  logging.rs  main.rs  obs.rs  paths.rs  practice_ui.rs  profile_cmd.rs  random_option_seed.rs  random_trainer.rs  select_options.rs  skin_audio.rs  skin_loader.rs  song_download.rs  songs_cmd.rs  stdio.rs  system_sound.rs  system_sound_manager.rs  table_cmd.rs  ui.rs  update.rs  video_bga.rs  window_config.rs
crates/bmz-player/src/config/: app_config.rs  key_config.rs  load.rs  play.rs  play_input.rs  profile_config.rs  settings_registry.rs
crates/bmz-player/src/i18n/locales/: en.ftl  ja.ftl  ko.ftl  zh-CN.ftl  zh-HK.ftl  zh-TW.ftl
crates/bmz-player/src/input/: gameinput.rs  gamepad.rs  gilrs.rs  mod.rs  shared.rs  winit.rs
crates/bmz-player/src/ir/: backfill.rs  bmz_official.rs  course_payload.rs  credentials.rs  device_key.rs  download.rs  mod.rs  payload.rs  provider.rs  provider_key.rs  secret_store.rs  sync.rs  types.rs
crates/bmz-player/src/screens/: course_session.rs  key_config_edit.rs  mod.rs  play_finish.rs  play_loop.rs  play_session.rs  play_snapshot.rs  play_start.rs  practice.rs  result.rs  result_ir.rs  result_model.rs  select_ir.rs  select_model.rs  settings_edit.rs  settings_model.rs
crates/bmz-player/src/storage/: collection_db.rs  common.rs  course_db.rs  course_score_db.rs  difficulty_table_db.rs  import.rs  library_db.rs  migration.rs  mod.rs  network_db.rs  play_result.rs  profile.rs  replay.rs  scan.rs  score_db.rs  score_import.rs
crates/bmz-render/: Cargo.toml
crates/bmz-render/src/: assets.rs  bitmap_font.rs  chart_graph.rs  lane.rs  lib.rs  plan.rs  renderer.rs  sample.rs  scene.rs  select_settings_dest.rs  skin.rs  skin_offset.rs  snapshot.rs  text.rs  ui.rs
crates/bmz-skin/: Cargo.toml
crates/bmz-skin-convert/: Cargo.toml
crates/bmz-skin-document/: Cargo.toml
crates/bmz-skin/src/: lib.rs  lr2.rs  lua.rs
crates/bmz-video/: Cargo.toml
docs/: controls.md  development.md  hs.md  i18n.md  ir.md  licenses.md  ln.md  packaging.md  rule.md  skin.md
i18n/: i18n.config.ts
i18n/locales/: additional.ts  catalog.test.ts  en.ts  ja.ts  ko.ts  zh-CN.ts  zh-HK.ts  zh-TW.ts
installer/flatpak/: bmz-player-flatpak  net.hyrorre.BMZPlayer.desktop  net.hyrorre.BMZPlayer.metainfo.xml  net.hyrorre.BMZPlayer.yml
installer/inno/: bmz-player.iss
scripts/: generate-app-icons.sh  generate-web-license-report.mjs  package-flatpak.sh  package-macos-app.sh  package-windows.ps1
server/db/: migrations
src/: main.rs
src/chart/: judge.rs  mod.rs
supabase/: config.toml  seed.sql
supabase/migrations/: 20260603013810_create_profiles.sql  20260604045854_create_ir_core.sql  20260604071426_add_score_device_type.sql  20260610154358_create_replay_storage.sql  20260611061904_create_course_scores.sql  20260612101901_add_score_double_option.sql  20260612103000_normalize_chart_key_modes.sql
(+167 files in other folders)
