[workspace]
members = [
    "crates/bmz-core",
    "crates/bmz-chart",
    "crates/bmz-audio",
    "crates/bmz-gameplay",
    "crates/bmz-render",
    "crates/bmz-skin",
    "crates/bmz-player",
    "crates/bmz-skin-convert",
    "crates/bmz-video",
    "crates/bmz-ffmpeg",
    "crates/bmz-font",
]
default-members = ["crates/bmz-player"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["hyrorre"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
toml = "0.8"
base64 = "0.22"
flate2 = "1"
bytemuck = "1"

rusqlite = { version = "0.31", features = ["bundled"] }

md5 = "0.7"
sha2 = "0.10"
ed25519-dalek = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
getrandom = "0.2"
encoding_rs = "0.8"

cpal = "0.15"
ctrlc = "3"
ffmpeg-next = "8"
wgpu = "29"
winit = "0.30"
gilrs = "0.10"
egui = "0.34"
egui-winit = "0.34"
egui-wgpu = "0.34"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rayon = "1"
font-kit = "0.14"
ab_glyph = "0.2.32"
rfd = "0.15"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
