[package]
name = "bmz-app"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
winit.workspace = true

bmz-core = { path = "../bmz-core" }
bmz-chart = { path = "../bmz-chart" }
bmz-audio = { path = "../bmz-audio" }
bmz-gameplay = { path = "../bmz-gameplay" }
bmz-render = { path = "../bmz-render" }
