[package]
name = "bmz-app"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
winit.workspace = true
gilrs.workspace = true
egui.workspace = true
egui-winit.workspace = true
rfd.workspace = true

rayon.workspace = true
tokio.workspace = true
reqwest.workspace = true

bmz-core = { path = "../bmz-core" }
bmz-chart = { path = "../bmz-chart" }
bmz-audio = { path = "../bmz-audio" }
bmz-gameplay = { path = "../bmz-gameplay" }
bmz-render = { path = "../bmz-render" }
bmz-skin = { path = "../bmz-skin" }
bmz-video = { path = "../bmz-video" }
