[package]
name = "bmz-audio"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
cpal.workspace = true
tracing.workspace = true
ffmpeg-next.workspace = true

bmz-core = { path = "../bmz-core" }
bmz-chart = { path = "../bmz-chart" }
bmz-ffmpeg = { path = "../bmz-ffmpeg" }

[features]
default = []
asio = ["cpal/asio"]
pulseaudio = ["cpal/pulseaudio"]
pipewire = ["cpal/pipewire"]
