[package]
name = "bmz-chart"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
md5.workspace = true
sha2.workspace = true
encoding_rs.workspace = true
bms-rs = "1.0"
strict-num-extended = "0.5"
serde_json = "1"

bmz-core = { path = "../bmz-core" }

[dev-dependencies]
tempfile = "3"
