[package]
name = "bmz-gameplay"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true

bmz-core = { path = "../bmz-core" }
bmz-chart = { path = "../bmz-chart" }
bmz-audio = { path = "../bmz-audio" }
