[package]
name = "bmz-player"
edition.workspace = true
version.workspace = true
license.workspace = true

# ASIO は Windows でのみ実体を持つ(cpal の asio-sys が cfg(windows) 限定)。
# default で有効化しておくと Windows ビルドは追加フラグ無しで ASIO 対応、
# macOS / Linux では cpal 側が no-op になるため実質無効。
# ASIO SDK / LLVM を用意できない環境では `--no-default-features` で除外できる。
[features]
default = ["asio"]
asio = ["bmz-audio/asio"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
base64.workspace = true
flate2.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
ctrlc.workspace = true
winit.workspace = true
gilrs.workspace = true
egui.workspace = true
egui-winit.workspace = true
rfd.workspace = true

rayon.workspace = true
tokio.workspace = true
reqwest.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
keyring.workspace = true
getrandom.workspace = true

bmz-core = { path = "../bmz-core" }
bmz-chart = { path = "../bmz-chart" }
bmz-audio = { path = "../bmz-audio" }
bmz-gameplay = { path = "../bmz-gameplay" }
bmz-render = { path = "../bmz-render" }
bmz-skin = { path = "../bmz-skin" }
bmz-video = { path = "../bmz-video" }
