[package]
name = "bmz-player"
edition.workspace = true
version.workspace = true
license.workspace = true

# ASIO は Windows でのみ実体を持つ(cpal の asio-sys が cfg(windows) 限定)。
# default で有効化しておくと Windows ビルドは追加フラグ無しで ASIO 対応、
# macOS / Linux では cpal 側が no-op になるため実質無効。
# ASIO SDK / LLVM を用意できない環境では `--no-default-features` で除外できる。
# PulseAudio は Linux / BSD 系の cpal host を有効化する。ALSA default PCM が
# 使えない環境では PulseAudio を選択して回避できる。
# PipeWire は Linux / BSD 系の cpal host を有効化する。環境の system
# PipeWire / SPA headers に依存するため、必要な環境で `--features pipewire` を使う。
[features]
default = ["asio", "pulseaudio"]
asio = ["bmz-audio/asio"]
pulseaudio = ["bmz-audio/pulseaudio"]
pipewire = ["bmz-audio/pipewire"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ryu.workspace = true
toml.workspace = true
base64.workspace = true
flate2.workspace = true
tar.workspace = true
sevenz-rust2.workspace = true
webbrowser.workspace = true
fluent-bundle.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unic-langid.workspace = true
rusqlite.workspace = true
ctrlc.workspace = true
winit.workspace = true
gilrs.workspace = true
egui.workspace = true
egui-winit.workspace = true
rfd.workspace = true
image.workspace = true
arboard.workspace = true

rayon.workspace = true
futures-util.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
keyring.workspace = true
getrandom.workspace = true

bmz-core = { path = "../bmz-core" }
bmz-chart = { path = "../bmz-chart" }
bmz-audio = { path = "../bmz-audio" }
bmz-gameplay = { path = "../bmz-gameplay" }
bmz-render = { path = "../bmz-render" }
bmz-skin = { path = "../bmz-skin" }
bmz-video = { path = "../bmz-video" }

[dev-dependencies]
fluent-syntax.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }
