[package]
name = "bmz-render"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
ab_glyph = "0.2.32"
jpeg-decoder = "0.3"
png = "0.17"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
wgpu.workspace = true
egui.workspace = true
egui-wgpu.workspace = true

bmz-core = { path = "../bmz-core" }
bmz-chart = { path = "../bmz-chart" }
bmz-gameplay = { path = "../bmz-gameplay" }
