[package]
name = "bmz-render"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
ab_glyph.workspace = true
arboard.workspace = true
bytemuck.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
wgpu.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
libc.workspace = true

bmz-core = { path = "../bmz-core" }
bmz-chart = { path = "../bmz-chart" }
bmz-gameplay = { path = "../bmz-gameplay" }
bmz-font = { path = "../bmz-font" }
