[package]
name = "bmz-skin"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
bmz-render = { path = "../bmz-render" }
encoding_rs.workspace = true
mlua.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
tracing.workspace = true
